# image-forensics-app

./: .env  Dockerfile  app.py  docker-compose.yml  install.py  pyproject.toml  requirements.txt  run.sh  setup.sh
.streamlit/: config.toml
modules/: carnet_integration.py  face_analyzer.py  location_analyzer.py  metadata_extractor.py  reverse_image_search.py  social_media_integration.py  video_analyzer.py
static/css/: style.css
static/js/: script.js
utils/: __init__.py  config.py  helpers.py
