[project]
name = "image-forensics-app"
version = "1.0.0"
requires-python = ">=3.11, <3.12"
dependencies = [
    "streamlit==1.31.0",
    "Pillow==10.1.0",
    "exifread==3.0.0",
    "requests==2.31.0",
    "folium==0.14.0",
    "geopy==2.4.1",
    "numpy==1.24.3",
    "python-dotenv==1.0.0",
    "streamlit-folium==0.19.0",
]